data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_503.wast
;; 4. **Test Description:**    - Create a scenario in which a `br` instruction targets a label that is not within the valid bounds of the loop's nesting structure.    - **Constraint Checking:** Verifies if the implementation correctly checks for the validity of target labels within the nesting structure.    - **Relation to Infinite Loops:** An invalid target label may cause the loop to miss its exit condition, resulting in an infinite loop.

(assert_invalid
  (module
    (func (param i32)
      (block
        (block
          (br 2 (local.get 0))
        )
      )
    )
  )
  "invalid target label"
)